tests/paczka1/fuzzy1/76696064.err
Error in line 6: B5ey7Xobwl A829 22,37
Error in line 13: XP9O S670 91,2
